--- a/pagina 3/style.css
+++ b/pagina 3/style.css
@@ -19,6 +19,7 @@
 body {
     margin: auto;
     background-color:var(--cor3);
+    min-height: 100vh;
 }
 
 header > h1 {
@@ -32,6 +33,7 @@ header > h1 {
 header {
     background-image:linear-gradient(to bottom, var(--cor3), var(--cor1));
     min-height: 160px;
+    max-height: 210px;
     padding-top: 40px;
     box-shadow: 10px 10px 10px #0000005d;
 }
@@ -42,8 +44,10 @@ header p {
     color: white;
     margin-bottom: 4px;
 }
+
 nav > a {
     background-color: var(--cor1);
+    background-size: cover;
 }
 
 a.cabecalho{
@@ -93,7 +97,6 @@ div {
     display: inline-block;
     margin: auto; 
     box-shadow: 10px 10px 10px #8a2cdc57;
-
 }
 
 #container {
