--- a/pagina 5/style.css
+++ b/pagina 5/style.css
@@ -80,14 +80,15 @@ p.destaque {
 }
 
 div {
-    height: 100px;
-    width: 100px;
+    max-width: 100px;
+    max-height: 100px;
+    min-width: 70px;
+    min-height: 70px;
     border: 1px solid black;
     border-radius: 10px;
     display: inline-block;
     margin: auto; 
     box-shadow: 10px 10px 10px #8a2cdc57;
-
 }
 
 #container {
