--- a/pagina 3/style.css
+++ b/pagina 3/style.css
@@ -19,7 +19,6 @@
 body {
     margin: auto;
     background-color:var(--cor3);
-    min-height: 100vh;
 }
 
 header > h1 {
@@ -33,7 +32,6 @@ header > h1 {
 header {
     background-image:linear-gradient(to bottom, var(--cor3), var(--cor1));
     min-height: 160px;
-    max-height: 210px;
     padding-top: 40px;
     box-shadow: 10px 10px 10px #0000005d;
 }
@@ -44,10 +42,9 @@ header p {
     color: white;
     margin-bottom: 4px;
 }
-
 nav > a {
     background-color: var(--cor1);
-    font-size: 5vw;
+    font-size: 2vh;
 }
 
 a.cabecalho{
