--- a/pagina youtube/style.css
+++ b/pagina youtube/style.css
@@ -81,11 +81,13 @@ p.destaque {
     
 }
 p.destaque1 {
-    width: 150px;
+    display: block;
+    min-width: 150px;
+    max-width: 300px;
     font-family: var(--fonte-android);
     color: var(--cor4);
     padding-left: 15px ;
-    background-image:linear-gradient(to right, var(--cor1), var(--cor3),var(--cor4) );
+    background-image:linear-gradient(to right, var(--cor1), var(--cor3));
     
 }
 
@@ -107,24 +109,15 @@ div:hover {
 .video1 {
     width: 300px;
     height: 200px;
+    padding-left: 15px;
     border-radius: 10px;
-    position: absolute;
-    left: 50%;
-    top: 22%;
-    transform: translate(-50%, 60%);
-    border: 1px solid black;
-    box-shadow: 8px 8px 10px #8a2cdcbd;
 }
 
 .video2 {
     width: 300px;
     height: 200px;
     border-radius: 10px;
-    position: absolute;
-    left: 50%;
-    top: 55%;
-    transform: translate(-50%, 60%);
-    border: 1px solid black;
+    padding-left: 15px;
 }
 
 
@@ -132,11 +125,7 @@ div:hover {
     width: 300px;
     height: 200px;
     border-radius: 10px;
-    position: absolute;
-    left: 50%;
-    top: 88%;
-    transform: translate(-50%, 60%);
-    border: 1px solid black;
+    padding-left: 15px;
 }
 
 .video1:hover {
