--- a/style.css
+++ b/style.css
@@ -38,16 +38,19 @@ header > h1 {
 
 header {
     background-image:linear-gradient(to bottom, var(--cor3), var(--cor1));
-    min-height: 200px;
+    min-height: 160px;
     padding-top: 40px;
     box-shadow: 10px 10px 10px #0000005d;
+    background-size: 100vw;
 }
 
 header p {
     text-align: center;
-    font-size: 20px;
+    font-size: 2vw;/*ajuste da letra a tela*/
     color: white;
     margin-bottom: 4px;
+    margin-top: 4px;
+    
 }
 nav > a {
     background-color: var(--cor1);
