--- a/pagina 2/style.css
+++ b/pagina 2/style.css
@@ -38,9 +38,9 @@ header {
 
 header p {
     text-align: center;
-    font-size: 20px;
     color: white;
     margin-bottom: 4px;
+    font-size: 2vw;
 }
 nav > a {
     background-color: var(--cor1);
