--- a/pasta resumos/style.css
+++ b/pasta resumos/style.css
@@ -39,7 +39,7 @@ header {
 
 header p {
     text-align: center;
-    font-size: 20px;
+    font-size: 2vw;
     color: white;
     margin-bottom: 4px;
 }
