--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 body {
     margin: auto;
-    background-color:var(--cor4);
+    background-color:var(--cor2);
 }
 
 header > h1 {
@@ -54,6 +54,10 @@ header p {
 
 .destaque {
     font-size: 1.5vw;
+    color: white;
+    text-align: center;
+    padding: 0px;
+    margin: 5px;
 }
 
 nav > a {
@@ -81,12 +85,13 @@ main {
     background-repeat: no-repeat;
     background-position: bottom right;
     max-height: 900px;
-    min-height: 500px;
-    max-width: 900px;
-    min-width: 400px;
+    min-height: 600px;
+    max-width: 800px;
+    min-width: 300px;
     margin: auto;
     margin-bottom: 20px;
-    border-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 #telefone {
@@ -130,11 +135,16 @@ section#sociais img:hover {
 }
 
 footer {
-    background-color: #892CDC;
+    background-color: var(--cor1);
     color: var(--cor4);
     text-align: center;
     font: arial, helvetica, sans-serif;
     font-style: italic;
-    font-size: 18px;
-    
+    min-width: 300px;
+    max-width: 800px;
+   margin: auto;
+}
+
+p#rodapé {
+    font-size: 16px;
 }
