--- a/estilos/inicio.css
+++ b/estilos/inicio.css
@@ -96,7 +96,7 @@ main {
 
 #telefone {
     position: absolute;
-    top: 20px;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
 
