--- a/estilos/categorias.css
+++ b/estilos/categorias.css
@@ -73,7 +73,7 @@ main {
     margin-bottom: 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding-top: 10px;
+    padding-top: 10px; 
 }
 
 main > div {
@@ -88,54 +88,37 @@ p.destaque {
 }
 
 div {
-    max-width: 100px;
-    max-height: 100px;
-    min-width: 70px;
-    min-height: 70px;
+    max-width: 150px;
+    max-height: 120px;
+    min-width: 120px;
+    min-height: 150px;
     border: 1px solid black;
     border-radius: 10px;
     display: inline-block;
     margin: auto; 
     box-shadow: 10px 10px 10px #8a2cdc57;
+    flex: 1 1 30%;
+    box-sizing: border-box;
+    text-align: center;
 }
 
 #container {
     position: relative;
 }
 
-#game1 {
-    border: 1px solid black;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+#game1, #game2 {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px;
 }
 
-#game2 {
-    position: absolute;
-    left: 30%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-}
-#game3 {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-#game4 {
-    position: absolute;
-    left: 70%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#game5 {
-    position: absolute;
-    left: 90%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-}
 
 div:hover {
     box-shadow: 8px 10px 8px var(--cor1);
@@ -156,4 +139,3 @@ footer {
     height: 50px;
     padding-left: 5px;
 }
-
