--- a/estilos/inicio.css
+++ b/estilos/inicio.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 * {
     /*height: 0px;
     width: 0px;*/
@@ -21,11 +22,9 @@
     --fonte-android: 'Android', 'cursive';
 }
 
-
-
 body {
     margin: auto;
-    background-color:var(--cor2);
+    background-color:var(--cor3);
 }
 
 header > h1 {
@@ -92,28 +91,26 @@ main {
     margin-bottom: 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    padding: 20px;
 }
 
 #telefone {
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    height: 327px;
-    width: 160px;
-    border-radius: 15px;
-    background: url("../estilos/imagens/frame-iphone.png") no-repeat;
-    background-size:  160px 327px ;
-    background-color:var(--cor4);
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    border-radius: 10px;
 }
 
 iframe#tela {
-    position: relative;
-    top: 42px;
-    left: 11px;
-    width: 138px;
-    height: 246px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+
 }
 
 ::-webkit-scrollbar {
