--- a/estilos/resumos.css
+++ b/estilos/resumos.css
@@ -82,16 +82,45 @@ main {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin: auto;
+   
 }
 
 main#secundario {
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
 }
 
+#container {
+    padding-left: 10px;
+}
 
+#tela1, #tela2, #tela3 {
+
+}
+
+.telefone  {  /*responsividade*/
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.telas {  /*responsividade*/
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+
+}
 p.destaque {
     font-family: var(--fonte-android);
     color: var(--cor4);
