--- a/paginas extras/conteudo iframes resumos/iframes.css
+++ b/paginas extras/conteudo iframes resumos/iframes.css
@@ -22,7 +22,7 @@
         }
 
         body {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             width: 100vw;
             height: 100vh;
             background-size: cover;
