--- a/estilos/home.css
+++ b/estilos/home.css
@@ -29,11 +29,18 @@
             text-align: center;
         }
 
+        p {
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: justify; 
+            padding: 10px;
+        }
+
         h2, h3 {
             background-image: linear-gradient(to right, var(--cor1), var(--cor2), var(--cor3));
             color: white;
             padding: 8px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family:var(--fonte-android);
+            text-align: center;
         }
 
         ::-webkit-scrollbar {
