--- a/estilos/inicio.css
+++ b/estilos/inicio.css
@@ -150,3 +150,42 @@ footer {
 p#rodapé {
     font-size: 16px;
 }
+
+/*ESTILO DO USUARIO*/
+body {
+    font-family: Arial, sans-serif;
+}
+
+.user-icon-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.user-icon {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.logout-popup {
+    display: none;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 5px;
+    padding: 10px;
+}
+
+.logout-popup a {
+    color: #333;
+    text-decoration: none;
+}
+
+.logout-popup a:hover {
+    text-decoration: underline;
+}
