--- a/estilos/topicos.css
+++ b/estilos/topicos.css
@@ -93,7 +93,12 @@ div {
 }
 
 div:hover {
-    box-shadow: 8px 10px 8px var(--cor1);
+    box-shadow: 8px 12px 10px var(--cor3);
+    transform: translate(-3px, -3px);
+}
+
+div:active {
+    transform: translate(1px, 1px);
 }
 
 img.migame1, img.migame2, img.migame3, img.migame4 {
@@ -121,5 +126,13 @@ footer {
     font-size: 18px;
     
 }
+.voltar {
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    padding-left: 5px;
+}
+
+
 
 
