--- a/estilos/youtube.css
+++ b/estilos/youtube.css
@@ -77,14 +77,20 @@ main {
     position: relative;
 }
 
-p.destaque {
+p#text {/*texto que tem na parte do youtube*/
+    font-family: var(--fonte-android);
+    font-size: 15px ;
+    padding: 10px;
+}
+
+p.destaque {/*todos os paragrafos com degrade mais claro no final*/
     font-family: var(--fonte-android);
     color: var(--cor4);
     padding-left: 15px ;
     background-image:linear-gradient(to right, var(--cor1), var(--cor3),var(--cor4) );
     
 }
-p.destaque1 {
+p.destaque1 {/*paragrafros com degrade com o final não tão claro*/
     display: block;
     min-width: 150px;
     max-width: 300px;
@@ -95,25 +101,10 @@ p.destaque1 {
     
 }
 
-div {
-    height: 100px;
-    width: 100px;
-    border: 1px solid black;
-    border-radius: 10px;
-    display: inline-block;
-    margin: auto; 
-    box-shadow: 10px 10px 10px #8a2cdc57;
-
-}
-
-div:hover {
-    box-shadow: 8px 10px 8px var(--cor1);
-}
-
 section.videos {
     display: block;
     position: absolute;
-    top: 50%;
+    top: 56%;
     left: 50%;
     transform: translate(-50%, -50%);
 
