--- a/estilos/categorias.css
+++ b/estilos/categorias.css
@@ -88,11 +88,8 @@ p.destaque {
 }
 
 div {
-    max-width: 150px;
-    max-height: 120px;
-    min-width: 120px;
-    min-height: 150px;
-    border: 1px solid black;
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
     display: inline-block;
     margin: auto; 
@@ -111,8 +108,23 @@ div {
     justify-content: center;
     gap: 10px;
     padding: 10px;
+    flex: 1 1 30%;
+    text-align: center;
+    width: 130px;
+    height: 200px;
+    text-decoration: none;
+    font-weight: bold;
 }
 
+img.quiz {
+    height: 150px;
+    width: 150px;
+    border-radius: 10px;
+    position: left top;
+    background-size: 100vw;
+    border: 1px solid black;
+    
+}
 section {
     display: flex;
     justify-content: center;
