--- a/estilos/quiz.css
+++ b/estilos/quiz.css
@@ -14,7 +14,7 @@ body, html {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+    width: 500x;
     text-align: center;
 }
 
