--- a/estilos/categorias.css
+++ b/estilos/categorias.css
@@ -87,6 +87,12 @@ p.destaque {
     background-image:linear-gradient(to right, var(--cor1), var(--cor3),var(--cor4) );
 }
 
+p.aviso {
+    padding: 10px;
+    font-family: var(--fonte-android);
+    font-size: 12px;
+}
+
 div {
     width: 150px;
     height: 150px;
