--- a/estilos/login.css
+++ b/estilos/login.css
@@ -19,7 +19,7 @@ form {
     box-sizing: border-box;
     padding: 40px;
     width: 350px;
-    height: 80vh;
+    height: 75vh;
     backdrop-filter: brightness(10%);
     flex-direction: column;
     display: flex;
@@ -35,7 +35,7 @@ a {
 
 h1 {
     font-weight: normal;
-    font-size: 3vw;
+    font-size: 1.5em;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 60px;
     text-align: center;
