--- a/estilos/categorias.css
+++ b/estilos/categorias.css
@@ -1,164 +1,202 @@
 @charset "UTF-8";
 
-@font-face {
-    font-family: 'Android' ;
-    src: url('./fontes/idroid.otf') format('opentype');
-    font-weight: normal;
-}
-
-:root {
-    --cor0:#000000;
-    --cor1:#52057B;
-    --cor2:#892CDC;
-    --cor3:#BC6FF1;
-    --cor4:#fcd9ff;
-
-    --fonte-android: 'Android', 'cursive';
+*{
+    padding: 0;
+    margin: 0;
+    outline: none;
+    border: none;
+    box-sizing: border-box;
 }
 
 body {
-    margin: auto;
-    background-color:var(--cor3);
-}
-
-header > h1 {
-    font-family: var(--fonte-android);
+    font-family: 'Poppins', sans-serif;
+    background-color: #18181B;
     color: white;
-    text-align: center;
-    margin: 0px;
-    text-shadow: 1px 3px 1px #52057B;
 }
 
-header {
-    background-image:linear-gradient(to bottom, var(--cor3), var(--cor1));
-    min-height: 160px;
-    padding-top: 40px;
-    box-shadow: 10px 10px 10px #0000005d;
-    
-}
-
-header p {
-    text-align: center;
-    font-size: 2.5vw;/*ajuste da letra a tela*/
-    color: white;
-    margin-bottom: 4px;
-    margin-top: 4px;
-    
-}
-
-nav > a {
-    background-color: var(--cor1);
-}
-
-a.cabecalho{
-    color: white;
+button{
+    background-color: #7f00d3;
+    margin: 10px;
     padding: 10px;
     border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    transition-duration: 0.5s;
+    color: white;
 }
 
-a.cabecalho:hover {
-    background-color: var(--cor3);
-    color: var(--cor5);
+button:hover {
+    background-color: #9b09fc;
 }
 
-main {
-    background-color:var(--cor4);
-    max-width: 800px;
-    min-width: 300px;
-    height: 400px;
+.blur{
+    position: absolute;
+    box-shadow: 0 0 1000px 50px #6e00b8;
+    z-index: -100;
+}
+
+.container{
+    max-width: 1200px;
     margin: auto;
-    margin-bottom: 20px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    padding-top: 10px; 
+    padding: 5rem 2rem;
 }
 
-main > div {
-    max-width: 100vh;
-}
-
-p.destaque {
-    font-family: var(--fonte-android);
-    color: var(--cor4);
-    padding-left: 15px ;
-    background-image:linear-gradient(to right, var(--cor1), var(--cor3),var(--cor4) );
-}
-
-p.aviso {
-    padding: 10px;
-    font-family: var(--fonte-android);
-    font-size: 12px;
-}
-
-div {
-    width: 150px;
-    height: 150px;
-    border-radius: 10px;
-    display: inline-block;
-    margin: auto; 
-    box-shadow: 10px 10px 10px #8a2cdc57;
-    flex: 1 1 30%;
-    box-sizing: border-box;
+section > h2{
+    margin-bottom: 1rem;
+    color: #fff;
     text-align: center;
+    font-size: 2.25rem;
+    font-weight: 600;
 }
 
-#container {
-    position: relative;
+.categorias{
+    margin-top: 4rem;
+    display: grid; /*corta em colunas quando passa o limite*/
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
 }
 
-#game1, #game2 {
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-    padding: 10px;
-    flex: 1 1 30%;
-    text-align: center;
-    width: 130px;
-    height: 200px;
+.link-categoria {
     text-decoration: none;
-    font-weight: bold;
 }
 
-img.quiz {
-    height: 150px;
-    width: 150px;
-    border-radius: 10px;
-    position: left top;
-    background-size: 100vw;
-    border: 1px solid black;
-    
+.categorias .categoria{
+    background-color: #27272a;
+    padding: 1rem;
+    border: 2px solid transparent;
+    border-radius: 15px;
+    transition: all 0.3s ease;
 }
-section {
+
+.categorias .categoria:hover{
+    background-color: #323232;
+    border-color: #fff;
+}
+
+.categorias .categoria span{
+    display: inline-block;
+    background-color: #6e00b8;
+    padding: 2px 9px;
+    margin-bottom: 1rem;
+    font-size: 1.75rem;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.categorias .categoria h4{
+    margin-bottom: 0.5rem;
+    color: #fff;
+    font-size: 1.7rem;
+    font-weight: 600;
+}
+
+.categorias .categoria p{
+    color: #ccc;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+}
+
+.categorias .categoria a{
+    color: #fff;
+    transition: all 0.3s ease;
+}
+
+img{
+    width: 100%;
     display: flex;
-    justify-content: center;
+}
+
+footer{
+    position: relative;
+    display: grid;
+    grid-template-columns: 400px repeat(3, 1fr);
+    gap: 2rem;
+}
+
+footer .column  .logo {
+    max-width: 100px;
+    margin-bottom: 2rem;
+}
+
+footer .column p{
+    color: #ccc;
+    margin-bottom: 2rem;
+}
+
+footer .column .socials{
+    display: flex;
     align-items: center;
+    gap: 1rem;
 }
 
-
-div:hover {
-    box-shadow: 8px 10px 8px #a845ffad;
-    transform: translate(-3px, -3px);
+footer .column .socials a{
+    color: #ccc;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
+    font-size: 1.25rem;
+    border-radius: 100%;
+    transition: all 0.3s ease;
+    text-decoration: none;
 }
 
-div:active {
-    transform: translate(1px, 1px);
+footer .column .socials a:hover{
+    color: #fff;
+    background-color: #7f00d3;
+    border-color: #7f00d3;
 }
 
-footer {
-    background-color: #892CDC;
-    color: var(--cor4);
+footer .column h4{
+    color: #fff;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+footer .column > a{
+    display: block;
+    color: #ccc;
+    margin-bottom: 1rem;
+    transition: all 0.3s ease;
+}
+
+footer .column > a:hover{
+    color: #7f00d3;
+}
+
+.copyright{
+    max-width: 1200px;
+    margin: auto;
+    padding: 1rem;
+    color: #fff;
+    font-size: 0.8rem;
     text-align: center;
-    font: arial, helvetica, sans-serif;
-    font-style: italic;
-    font-size: 18px;
-    
 }
-.voltar {
-    border-radius: 50px;
-    width: 50px;
-    height: 50px;
-    padding-left: 5px;
+
+@media (width < 900px){
+    .nav-links{
+        flex-wrap: wrap;
+    }
+    header{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    header .image{
+        grid-area: 1/1/2/2;
+    }
+    .categorias{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    footer{
+        grid-template-columns: 1fr 200px;
+    }
+}
+
+@media (width < 600px){
+    header .image::before{
+        display:none ;
+    }
+
+    .categorias{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    footer{
+        grid-template-columns: 1fr 150px;
+    }
 }
