--- a/estilos/quiz.css
+++ b/estilos/quiz.css
@@ -2,12 +2,12 @@
 
 body, html {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
     padding:0 ;
     background-color: #18181B;
-    display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
+    display: flex;
 }
 
 #quiz-container {
@@ -15,17 +15,17 @@ body, html {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 80%;
+    max-width: 540px;
+    margin: auto;
+    font-size: 20px;
     
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 #question {
     color: white;
 }
+
 #options {
     list-style: none;
     padding: 0;
@@ -95,4 +95,14 @@ a {
 
 #recarregar:hover {
     transform: rotate(360deg);
+}
+
+@media (width < 600px) {
+    #quiz-container {
+        background: #333333;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        width: 500px;
+    }
 }
